--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <!-- <input id="search-bar-input"> -->
                     <!-- <button id="btn">🔍</button> -->
                 </div>
-                <h1>Pizza Delivery Website</h1>
+                <h1>Pizza Delivery </h1>
                 <div >
                     <ul class="nav-menu">
                         <!-- <li class="nav-menu-pills">offers</li> -->
